--- a/web/components/CategoryCoverageChart/CategoryCoverageChart.module.scss
+++ b/web/components/CategoryCoverageChart/CategoryCoverageChart.module.scss
@@ -17,10 +17,12 @@
   }
 
   .content {
-    height: 95%;
-    width: 95%;
-    position: relative; // Add this
-    overflow: hidden; // Optional: clips anything slightly overflowing
+    height: 100%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .title {
     white-space: nowrap;
